--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,14 @@ name: Deploy
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-    paths-ignore:
-    - 'process/**'
+#  push:
+  # branches: [ main ]
+#    paths-ignore:
+#    - 'process/**'
 
+  pull_request:
+    types: [opened, synchronize, reopened]
+    
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -37,10 +40,12 @@ jobs:
 #        For now... Until we start using npm instead of yarn
       - run: npm i
       - run: npm run-script build --production
+      - run: echo running on branch ${GITHUB_REF##*/}
+      - run: echo ${{github.event.issue.number}}
 #      - uses: aws-actions/configure-aws-credentials@v1
-#        with:
+ #       with:
 #          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
 #          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 #          aws-region: ${{ secrets.AWS_REGION }}
-#      - run: aws s3 sync ./build s3://${secrets.S3_BUCKET}
-#      - run: aws s3 cp s3://${secrets.S3_BUCKET}/index.html  s3://${secrets.S3_BUCKET}/index.html --region us-east-1 --metadata-directive REPLACE --cache-control max-age=0 --content-type "text/html"
+#      - run: aws s3 sync ./build s3://${secrets.S3_BUCKET}/${GITHUB_REF##*/}
+#      - run: aws s3 cp s3://${secrets.S3_BUCKET}/${GITHUB_REF##*/}/index.html  s3://${secrets.S3_BUCKET}/${GITHUB_REF##*/}/index.html --region us-east-1 --metadata-directive REPLACE --cache-control max-age=0 --content-type "text/html"
