--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       - run: npm run-script build --production
       - run: echo running on branch ${GITHUB_REF##*/}
       - run: echo  ${GITHUB_REF#refs/heads/}
-      - run: echo  ${github.event.number}
+      - run: echo  ${{github.event.number}}
 #      - uses: aws-actions/configure-aws-credentials@v1
  #       with:
 #          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
