--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,10 +46,14 @@ jobs:
       - run: echo  ${GITHUB_HEAD_REF#}
       - run: echo  ${{github.event.number}}
       
-#      - uses: aws-actions/configure-aws-credentials@v1
- #       with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: GitHub Environment Variables Action
+        uses: FranzDiebold/github-env-vars-action@v2.1.0
+      - run: echo  ${ CI_HEAD_REF_SLUG}
+   
+    #  - uses: aws-actions/configure-aws-credentials@v1
+   #     with:
+  #        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+ #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 #          aws-region: ${{ secrets.AWS_REGION }}
 #      - run: aws s3 sync ./build s3://${secrets.S3_BUCKET}/${GITHUB_REF##*/}
-#      - run: aws s3 cp s3://${secrets.S3_BUCKET}/${GITHUB_REF##*/}/index.html  s3://${secrets.S3_BUCKET}/${GITHUB_REF##*/}/index.html --region us-east-1 --metadata-directive REPLACE --cache-control max-age=0 --content-type "text/html"
+#      - run: aws s3 cp s3://${secrets.S3_BUCKET}/${CI_HEAD_REF_SLUG}/index.html  s3://${secrets.S3_BUCKET}/${GITHUB_REF##*/}/index.html --region us-east-1 --metadata-directive REPLACE --cache-control max-age=0 --content-type "text/html"
