--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,5 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-      - run: aws s3 sync ./build s3://${secrets.S3_BUCKET}/${GITHUB_REF##*/}
+      - run: aws s3 sync ./build s3://${secrets.S3_BUCKET}/${CI_HEAD_REF_SLUG}
       - run: aws s3 cp s3://${secrets.S3_BUCKET}/${CI_HEAD_REF_SLUG}/index.html  s3://${secrets.S3_BUCKET}/${CI_HEAD_REF_SLUG}/index.html --region ${secrets.AWS_REGION} --metadata-directive REPLACE --cache-control max-age=0 --content-type "text/html"
